# localporter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/localporter-app/: Cargo.toml  build.rs
crates/localporter-app/src/: main.rs
crates/localporter-core/: Cargo.toml
crates/localporter-core/src/: error.rs  lib.rs  logging.rs
crates/localporter-core/src/adapter/macos/command/: lsof_port_source.rs  mod.rs  parser.rs  ps_parent_chain_source.rs  ps_process_source.rs  runner.rs
crates/localporter-core/src/adapter/windows/command/: cim_parent_chain_source.rs  cim_process_source.rs  mod.rs  net_connection_port_source.rs  parser.rs
crates/localporter-core/src/application/: mod.rs  snapshot_service.rs
crates/localporter-core/src/domain/: mod.rs  port_binding.rs  process_origin.rs  process_summary.rs  snapshot.rs
crates/localporter-core/src/sources/: mod.rs  parent_chain_source.rs  port_source.rs  process_info_source.rs
crates/localporter-core/tests/: macos_snapshot_smoke.rs
crates/localporter-ui/: Cargo.toml
crates/localporter-ui/src/: lib.rs  logging.rs
crates/localporter-ui/src/apps/: mod.rs  standalone.rs
crates/localporter-ui/src/components/: bottom_bar.rs  collapsible_panel.rs  confirm_dialog.rs  filter_bar.rs  menu_bar_panel.rs  mod.rs  port_row.rs  port_row_details.rs  process_panel.rs  settings_modal.rs  switch.rs  title_bar.rs  toast_overlay.rs
crates/localporter-ui/src/screens/: main_screen.rs  mod.rs
crates/localporter-ui/src/state/: app_state.rs  collection_controller.rs  mod.rs  settings.rs
crates/localporter-ui/src/windows/: constants.rs  host.rs  macos.rs  mod.rs  options.rs
packaging/windows/: localporter.wxs
release-notes/: v0.1.0.md
scripts/: build-macos-app.sh  build-macos-dmg.sh  build-windows-app.ps1  build-windows-msi.ps1  build-windows-release.ps1  build-windows-zip.ps1  windows-build-common.ps1
