[workspace]
members = [
    "crates/localporter-app",
    "crates/localporter-ui",
    "crates/localporter-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
eframe = "0.35.0"

localporter-ui = { path = "crates/localporter-ui" }
localporter-core = { path = "crates/localporter-core" }
