[package]
name = "localporter-ui"
version.workspace = true
edition.workspace = true

[dependencies]
eframe.workspace = true
egui_extras.workspace = true
localporter-core.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSRunningApplication", "NSResponder", "NSScreen"] }
tray-icon = { version = "0.20.1", default-features = false }
